--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
     "merge-images": "^2.0.0",
+    "node.js": "^0.0.1-security",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
